tests/errors/union_non_object_member.dang
enum Color { RED GREEN BLUE }

type Dog {
  pub name: String!
}

union Bad = Dog | Color
